# GazeGenesis

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: clone_data.yml  clone_statistics.yml  fetch_clone_data.yml  main.yml  python-publish.yml
.scripts/: fetch_clone_data.py
00_hello_world/: README.md  fourteen_seg.py  main.py
Examples/Classification/ConvolutionalNeuralNetwork/: README.md  main.py
Examples/Classification/GoogLeNet/: README.md  main.py
Examples/Classification/LeNet/: README.md  main.py
Examples/Generative/DCGAN/: main.py  (+1 more)
GazeGenesis/: README.md  pyproject.toml
GazeGenesis/src/GazeGenesis/ComputerVision/Classification/ConvolutionalNeuralNetwork/: user.py
GazeGenesis/src/GazeGenesis/ComputerVision/Classification/EfficientNet/: model.py
GazeGenesis/src/GazeGenesis/ComputerVision/Classification/GoogLeNet/: model.py  user.py
GazeGenesis/src/GazeGenesis/ComputerVision/Classification/LeNet/: model.py
GazeGenesis/src/GazeGenesis/ComputerVision/Classification/ResNet/: model.py  user.py
GazeGenesis/src/GazeGenesis/ComputerVision/Classification/VisionTransformer/: model.py  user.py
GazeGenesis/src/GazeGenesis/ComputerVision/Classification/YOLOv1/: loss.py  model.py  user.py
GazeGenesis/src/GazeGenesis/ComputerVision/Datasets/: CIFAR10.py  CIFAR100.py  ImageNet.py  MNIST.py
GazeGenesis/src/GazeGenesis/ComputerVision/Generative/DCGAN/: model.py  user.py
GazeGenesis/src/GazeGenesis/ComputerVision/Generative/GAN/: model.py  user.py
GazeGenesis/src/GazeGenesis/ComputerVision/Generative/WGAN/: user.py
(+37 files in other folders)
